Update more classes

--- a/app/views/accept-terms.html
+++ b/app/views/accept-terms.html
@@ -27,7 +27,7 @@
         Read our <a href="#">full terms and conditions</a>.
       </p>
 
-      <hr />
+      <hr class="govuk-section-break govuk-section-break--visible" />
       <form action="#" method="post">
         <fieldset>
           <legend></legend>
