--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -34,7 +34,7 @@
 
         {{ macros.textarea(course.programmeCode + '-about-this-course', 'About this course', 20, '', 400, errors) }}
 
-        <hr />
+        <hr class="govuk-section-break govuk-section-break--visible" />
 
         <!-- <h3 class="govuk-heading-l remove-top-margin">Outcome</h3>
         <p>Pick the outcome which describes what a trainee will get when they complete this course.</p>
@@ -79,7 +79,7 @@
             {{ macros.radioGroup(course.programmeCode + '-outcome', fields, errors, 4) }}
           </div>
         </details>
-        <hr /> -->
+        <hr class="govuk-section-break govuk-section-break--visible" /> -->
 
         <h3 class="govuk-heading-l remove-top-margin">Interview process</h3>
 
@@ -94,7 +94,7 @@
 
         {{ macros.textarea(course.programmeCode + '-interview-process', 'Interview process (optional)', 10, '', 250) }}
 
-        <hr />
+        <hr class="govuk-section-break govuk-section-break--visible" />
 
         <h3 class="govuk-heading-l remove-top-margin">How school placements work</h3>
 
