--- a/app/views/example-states.html
+++ b/app/views/example-states.html
@@ -31,7 +31,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Primary (P123)</a>
           <br>
-          <span class="font-xsmall">PGCE with QTS full time</span>
+          <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
@@ -50,7 +50,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Chemistry (PC23)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
@@ -69,7 +69,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Mathematics (N123)</a>
           <br>
-          <span class="font-xsmall">PGCE with QTS full time</span>
+          <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
@@ -86,7 +86,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Geography (PP23)</a>
           <br>
-          <span class="font-xsmall">PGCE with QTS full time</span>
+          <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
@@ -105,7 +105,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">History (DD23)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
@@ -122,11 +122,11 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Physics (D123)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="nowrap">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published&nbsp;*</span><br />
-          <span class="font-xsmall">* Unpublished changes</span>
+          <span class="govuk-body-s">* Unpublished changes</span>
         </td>
         <td class="nowrap">
           <a href="#">Yes – view online</a>
@@ -142,7 +142,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Modern languages (French and Spanish)&nbsp;(W123)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
@@ -161,7 +161,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Rolled over course (R123)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
