--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -70,7 +70,7 @@
         </blockquote>
       </div>
 
-      <hr />
+      <hr class="govuk-section-break govuk-section-break--visible" />
 
       <p>Original story: <a href="https://dfedigital.atlassian.net/browse/BATSA-401">BATSA-401</a></p>
 
