--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -94,7 +94,7 @@
 
 
 
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
 
 
@@ -105,7 +105,7 @@
     </p>
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -127,7 +127,7 @@
 
       <p>You have unpublished changes.</p>
 
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
 
 
@@ -138,7 +138,7 @@
     </p>
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -157,7 +157,7 @@
 
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -181,7 +181,7 @@
 
       <p>You have unpublished changes.</p>
 
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
 
 
@@ -192,7 +192,7 @@
     </p>
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -264,14 +264,14 @@
     <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="#">Preview course</a>
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
     <a href="#" class="button">Publish</a>
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
@@ -288,7 +288,7 @@
 
 
     <p>You have unpublished changes.</p>
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
 
 
@@ -296,14 +296,14 @@
     <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="#">Preview course</a>
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
     <a href="#" class="button">Publish</a>
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
@@ -324,7 +324,7 @@
 
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
@@ -343,7 +343,7 @@
 
 
     <p>You have unpublished changes.</p>
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
 
 
@@ -351,14 +351,14 @@
     <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="#">Preview course</a>
-    <hr>
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
     <a href="#" class="button">Publish</a>
 
 
-  <hr>
+  <hr class="govuk-section-break govuk-section-break--visible" />
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
