--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -36,7 +36,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">New course, just added (N123)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
@@ -52,7 +52,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Draft course, not published (DD23)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
@@ -68,7 +68,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Draft course, published before (D123)</a>
           <br>
-          <span class="font-xsmall">QTS full time – <a href="#">View on website</a></span>
+          <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft #2</span>
@@ -87,7 +87,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Published course (P123)</a>
           <br>
-          <span class="font-xsmall">QTS full time – <a href="#">View on website</a></span>
+          <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
@@ -106,7 +106,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Published before applications open (PP23)</a>
           <br>
-          <span class="font-xsmall">QTS full time – <a href="#">View on website</a></span>
+          <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
@@ -125,7 +125,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Published but full (PC23)</a>
           <br>
-          <span class="font-xsmall">QTS full time – <a href="#">View on website</a></span>
+          <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
@@ -144,7 +144,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Withdrawn course (W123)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
@@ -163,7 +163,7 @@
         <td>
           <a href="/course/E65/28ZC" class="govuk-heading-s">Rolled over course (R123)</a>
           <br>
-          <span class="font-xsmall">QTS full time</span>
+          <span class="govuk-body-s">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
