--- a/app/views/history/validating-on-publish/index.html
+++ b/app/views/history/validating-on-publish/index.html
@@ -18,7 +18,7 @@
 
       <p>When publishing we need to validate that all the required parts are present. When fields aren’t present we need to prompt users to go back to those fields and complete them.</p>
 
-      <hr />
+      <hr class="govuk-section-break govuk-section-break--visible" />
 
       <p><a href="https://trello.com/c/jB5C2SWM/47-design-validation-at-time-of-publishing">Trello story</a>, part of the “<a href="https://trello.com/c/gczKVoh3/51-simple-publish-action-and-validation-word-counts-and-mandatory-fields">Simple publish</a>” story map.</p>
     </div>
