--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -76,7 +76,7 @@
     <div class="js-cant-copy" style="display: none">
       <p>When you’ve added content to this page, you can copy it to other courses</p>
     </div>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
     {{ formatting() }}
   </div>
@@ -97,7 +97,7 @@
       <p>You have unpublished changes.</p>
       <p class="add-top-margin">Last saved:<br />{{ today() }} by Jane Doe</p>
     </div>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
 
   {% if state == 'published' %}
@@ -106,13 +106,13 @@
   {% if publishedBefore or state == 'published' %}
     <p>Last published:<br />{{ today() }} by Rita Cosca</p>
 
-    {% if state == 'draft' %}<hr />{% endif %}
+    {% if state == 'draft' %}<hr class="govuk-section-break govuk-section-break--visible" />{% endif %}
   {% endif %}
 
   {% if state == 'new' %}
     <span class="phase-tag phase-tag-no-content add-bottom-margin">Empty</span>
     <p>You need to complete and publish this information.</p>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
 
   {% if state == 'new' or state == 'draft' %}
@@ -120,7 +120,7 @@
     <p>This information will show on all your courses.</p>
     <p>Preview any course to see how it will look to applicants.</p>
 
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>You can make changes to this after publishing it.</p>
@@ -137,7 +137,7 @@
     <span class="phase-tag phase-tag-draft add-bottom-margin">Draft</span>
     <p>You have unpublished changes.</p>
     <p class="add-top-margin">Last saved:<br />{{ today() }} by Jane Doe</p>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
 
   {% if state == 'published' %}
@@ -146,13 +146,13 @@
 
   {% if publishedBefore or state == 'published' %}
     <p>Last published:<br />{{ today() }} by Rita Cosca</p>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
 
   {% if state == 'new' %}
     <span class="phase-tag phase-tag-no-content add-bottom-margin">Empty</span>
     <p>You need to complete and publish this information.</p>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
 
   {% if state == 'new' or state == 'draft' %}
@@ -160,13 +160,13 @@
     <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="{{ previewLink }}">Preview course</a>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes.</p>
 
     <a href="{{ publishLink }}" class="button">Publish</a>
-    <hr />
+    <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
 
   <h3 class="govuk-heading-m remove-top-margin">View on website</h3>
