--- a/docs/views/examples/start-page.html
+++ b/docs/views/examples/start-page.html
@@ -59,7 +59,7 @@
       <aside class="govuk-related-items" role="complementary">
         <h2 class="govuk-heading-m" id="subsection-title">Subsection</h2>
         <nav role="navigation" aria-labelledby="subsection-title">
-          <ul class="font-xsmall">
+          <ul class="govuk-body-s">
             <li><a href="#">Related link</a></li>
             <li><a href="#">Related link</a></li>
             <li><a href="#" class="bold-xsmall">More <span class="visuallyhidden">in Subsection</span></a></li>
